--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,8 @@ set( EXECUTABLE_NAME app )
 
 add_executable( ${EXECUTABLE_NAME} ${OS_BUNDLE_NAME}
     ${CMAKE_CURRENT_LIST_DIR}/src/main.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/src/fonts.cpp )
+    ${CMAKE_CURRENT_LIST_DIR}/src/fonts.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/styles.cpp )
 
 target_include_directories( ${EXECUTABLE_NAME} PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}/include
