Refactor `main` into classes. - `GlfwWindow` encapsulates some GLFW-only functionality - `Application` uses the `GlfwWindow` as the application window and uses OpenGL to draw the background and ImGui to draw the UI elements.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,9 @@ set( EXECUTABLE_NAME app )
 
 add_executable( ${EXECUTABLE_NAME} ${OS_BUNDLE_NAME}
     ${CMAKE_CURRENT_LIST_DIR}/src/main.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/application.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/fonts.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/glfw_window.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/styles.cpp )
 
 target_include_directories( ${EXECUTABLE_NAME} PRIVATE
