--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,7 @@ add_executable( ${EXECUTABLE_NAME} ${OS_BUNDLE_NAME}
     ${CMAKE_CURRENT_LIST_DIR}/src/application.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/fonts.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/glfw_window.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/opengl_renderer.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/styles.cpp )
 
 target_include_directories( ${EXECUTABLE_NAME} PRIVATE
