CI: fix changelog generation. Of course the git repo needs to be checked out...

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,6 +130,8 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
+    - uses: actions/checkout@v2
+
     - name: 📄 Generate a changelog
       id: changelog
       uses: metcalfc/changelog-generator@v1.0.0
