Initial linting additions
 - export compile-commands by default
 - added an initial clang-tidy config
 - added linting job to CI, which calls clang-format and clang-tidy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ message( STATUS "Compiler ID: ${CMAKE_CXX_COMPILER_ID} (${CMAKE_CXX_COMPILER_VER
 
 #--------------------------------------------------
 set( CMAKE_DISABLE_IN_SOURCE_BUILD ON  )
+set( CMAKE_EXPORT_COMPILE_COMMANDS ON  )
 set( CMAKE_CXX_STANDARD            17  )
 set( CMAKE_CXX_STANDARD_REQUIRED   ON  )
 set( CMAKE_CXX_EXTENSIONS          OFF )
