--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,9 +122,50 @@ jobs:
         FOLDER: webapp
         CLEAN: true
 
+  lint:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: 📚 Install required system packages
+      run: |
+        sudo apt update
+        sudo apt install xorg-dev libglu1-mesa-dev clang-format clang-tidy
+
+    - name: 📁 Create build folder
+      run: cmake -E make_directory ${{runner.workspace}}/build
+
+    - name: ⚙ Configure
+      shell: bash
+      working-directory: ${{runner.workspace}}/build
+      run: cmake $GITHUB_WORKSPACE
+
+    - name: 🧪 clang-format linting
+      if: always()
+      shell: bash
+      run: |
+        clang-format --version
+        OUTPUT=$(clang-format include/**.hpp src/**.cpp -n 2>&1)
+        if [[ $OUTPUT ]]; then
+          echo "$OUTPUT"
+          exit 1
+        fi
+
+    - name: 🧪 clang-tidy linting
+      if: always()
+      shell: bash
+      run: |
+        clang-tidy --version
+        clang-tidy include/**.hpp src/**.cpp -p ${{runner.workspace}}/build 2>&1 | while read -r line; do
+          echo $line
+        done
+
   draft-release:
     if: github.event_name == 'push' && startsWith( github.ref, 'refs/tags/' )
-    needs: [desktop-app, web-app]
+    needs: [desktop-app, web-app, lint]
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
